Fixing this overlapping text that prevents from clicking the "remove" button once and for all by using a z-index.

--- a/src/Orchard.Web/Modules/Orchard.ContentTypes/Styles/orchard-contenttypes-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.ContentTypes/Styles/orchard-contenttypes-admin.css
@@ -78,6 +78,8 @@
 .manage-part .manage-field .manage {
     margin-top: -2.9em;
     padding-right: 20px;
+    position: relative;
+    z-index: 999;
 }
 
 .manage-field .details,
